<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    tools:context=".views.ViewCompanyDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">
        <!--    TextView to show Company Name-->
        <TextView
            android:id="@+id/idTvCompanyNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="Company Name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_border_2"
            android:padding="10dp"
            android:textColor="#423E3E"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/idTvCompanyAddressTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="Company Address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvCompanyAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_border_2"
            android:padding="10dp"
            android:textColor="#423E3E"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/idTvCompanyCountryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="Company Country"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvCompanyCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_border_2"
            android:padding="10dp"
            android:textColor="#423E3E"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/idBtnCompanyDetailsEditCompanyDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/royal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="EDIT DETAILS"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>