<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/idMenuHamburguer"
        android:title=""
        android:icon="@drawable/ic_baseline_menu_24"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/idMenuCompanyDetails"
                android:title="Company Details"
                android:icon="@drawable/ic_baseline_warehouse_24"/>
            <item
                android:id="@+id/idMenuUsers"
                android:title="Users"
                android:icon="@drawable/ic_baseline_manage_accounts_24"/>
            <item
                android:id="@+id/idMenuProducts"
                android:title="Products"
                android:icon="@drawable/_725534_box_icon"/>
            <item
                android:id="@+id/idMenuOrders"
                android:title="Shipping Orders"
                android:icon="@drawable/ic_baseline_shopping_cart_24"/>
            <item
                android:id="@+id/idMenuPurchaseOrders"
                android:title="Purchase Orders"
                android:icon="@drawable/ic_money_24"
                />
            <item
                android:id="@+id/idMenuReceiving"
                android:title="Receiving"
                android:icon="@drawable/_726506_truck_icon"/>
            <item
                android:id="@+id/idMenuInventory"
                android:title="Inventory"
                android:icon="@drawable/_303114_explore_lense_magnifier_search_searching_icon__1_"/>
            <item
                android:id="@+id/idMenuLocations"
                android:title="Locations"
                android:icon="@drawable/_726131_location_point_icon"/>
            <item
                android:id="@+id/idMenuBarcodeScanner"
                android:title="Barcode Scanner"
                android:icon="@drawable/baseline_qr_code_scanner_24"/>
            // utilities object
            <item
                android:id="@+id/idMenuUtilities"
                android:title="Utilities"
                android:icon="@drawable/baseline_power_24"/>
            <item
                android:id="@+id/idMenuFeedback"
                android:title="Feedback"
                android:icon="@drawable/ic_baseline_person_24"/>
            <item
                android:id="@+id/idMenuLogout"
                android:title="Log out"
                android:icon="@drawable/ic_baseline_person_24"/>

        </menu>
    </item>


</menu>