...
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <Button
        android:id="@+id/idBtnSetCompanyDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorPrimary"
...
